update next steps

--- a/notebooks/NYC_sandbox.ipynb
+++ b/notebooks/NYC_sandbox.ipynb
@@ -35,6 +35,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Next Steps\n",
+    "\n",
+    "1. Review [Geo-Street-Talk-Global](https://github.com/Streets-Data-Collaborative/geo-street-talk-global)\n",
+    "    - Does the ReadMe provide enough information for you to get started?\n",
+    "    - Is the code well commented?\n",
+    "    - Can any sections of code be cleaned up or made more modular?\n",
+    "    - What extensions can you think of to make the project more useful?\n",
+    "\n",
+    "2. Introduce improvements\n",
+    "    - Use Sinuosity as a measure instead of Circuity. [geopandas implementation](https://github.com/Geosyntec/gisutils/blob/a4034d5dfed472588548306860d010b3dd99a980/gisutils/algo.py)\n",
+    "    - Apply filters for results (e.g., longest, shortest)\n",
+    "    - Merge a single RadRoads() function that shows the following for each input city with :\n",
+    "        - Longest Segment [Red]\n",
+    "        - Shortest Segment [Blue]\n",
+    "        - Straightest Segment [Green]\n",
+    "        - Most Sinusoisal segment aka Curviest [Yellow]\n",
+    "    - [Index based on Name and From-To Nodes](https://www.openstreetmap.org/way/260042856#map=17/40.01316/-105.28674&layers=D): OSM contains `Node` information for every `Way` and this can be used to identify, spatially, the street segments.\n",
+    "    - [Colorize street types](http://geoffboeing.com/2016/11/osmnx-python-street-networks/)\n",
+    "    - Insert Google map interactive window\n",
+    "\n",
+    "3. Polish notebooks and fix in-notebook issues\n",
+    "\n",
+    "4. Blog post on current results\n",
+    "\n",
+    "5. Think in the [larger context](https://github.com/Streets-Data-Collaborative/Autonomous_Transportation_Analyzer) and plan for the next\n",
+    "\n",
+    "6. Other things to ponder:\n",
+    "    - How to utilize this characteristics to evaluate ride/walk/street quality, preparedness of AV of a city, etc.?\n",
+    "    - Create a profile for road network characteristics that can be compared worldwide. Maybe a regional view is more meaningful than identifying a single street (longest, straightest)?\n",
+    "    - Other examples: identifying straightest roads between two points can be used to ask \"which city has the straightest connections between CBD and populated residential areas?\"\n",
+    "\n",
+    "7. Random notes:\n",
+    "    - The longest and shortest street may turn out to be highways: filtering; avoid 'Motorway' in our outcome?\n",
+    "    - Group by names: may combine two different streets with same name: verify whether all segments of a road is connected; segs of a same road shares the same OSMid?; add new street index besides street name: OSM nodes from, OSM nodes to. i.e: Street name OSM nodes from-OSM nodes to\n",
+    "    - Shp file does not have the double edges (length doubled for two-way roads) problem?\n",
+    "    - Other attributes that might be good to look into: direction, width?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -2410,81 +2452,6 @@
    "metadata": {},
    "source": [
     "# > > > Notebook ends here < < <"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1. The longest and shortest street may turn out to be highways, if we set our potential client to\n",
-    "be autonomous cars, it's less feasible to test autonomous cars on highways.\n",
-    "2. Our current \"groupby\" method has loopholes: it may combine two different streets with\n",
-    "same name into one street. The length will be inaccurate.\n",
-    "\n",
-    "\n",
-    "node attributes: verify whether all segments of a road is connected"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## To confirm\n",
-    "\n",
-    "1. Segs of a same road shares the same OSMid?\n",
-    "2. Shp file does not have the double edges (length doubled for two-way roads) problem?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Meeting 1/13 Minutes\n",
-    "- Improvements on current (longest/shortest) notebook: \n",
-    "  1. Insert Google map interactive window \n",
-    "  2. Colorize each street type (http://geoffboeing.com/2016/11/osmnx-python-street-networks/)\n",
-    "\n",
-    "\n",
-    "- Questions been touched/answered: \n",
-    "   1. [Longest/Shortest] Avoid 'Motorway' in our outcome? --  Refer Hou Cheng's notebook for grouping by each street's highway type.\n",
-    "   2. [Longest/Shortest] Determine if one street is one way? -- Divide one street into 100 nodes and reverse check if they have same street name \n",
-    "   3. [Longest/Shortest] How to differentiate two streets with same name? -- Add new street index besides street name: OSM nodes from, OSM nodes to. i.e: Street name OSM nodes from-OSM nodes to (#5 )\n",
-    "   4. [Straightest/Curviest] google\" sinuosity\"\n",
-    "\n",
-    "- Next Milestons:\n",
-    "  1. Curviest/Straightest\n",
-    "  2. Polish all the notebooks"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Great question.\n",
-    "\n",
-    "We discussed this in length during #9\n",
-    "\n",
-    "Beginning and End are relative terms. It depends on which direction you look at the map  (North, South, East West) OR if a street is one-way where the direction is enforced already.\n",
-    "\n",
-    "- Indexing based on Name and From-To Nodes\n",
-    "- Example used: https://www.openstreetmap.org/way/260042856#map=17/40.01316/-105.28674&layers=D\n",
-    "\n",
-    "OSM contains `Node` information for every `Way` and this can be used to identify, spatially,  the street segments.\n",
-    "\n",
-    "\n",
-    "I also asked everyone to check out \n",
-    "https://github.com/Streets-Data-Collaborative/geo-street-talk-global and speak with Yukun Van about how you can combine methods from there and use here.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1. Direction\n",
-    "2. Width\n",
-    "3. Angle\n",
-    "4. Circuity\n",
-    "5. Sinuosity"
    ]
   },
   {
